redis-deployment.yaml
# redis-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
        - name: redis-master
          image: redis:latest
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          # args: ["--requirepass", "password"] # Set a password for the Redis master
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
 
---
# redis-replica-deployment.yaml
 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: replica
  template:
    metadata:
      labels:
        app: redis
        role: replica
    spec:
      containers:
        - name: redis-replica
          image: redis:latest
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          args: ["--slaveof", "redis-master", "6379"] # Connect to the Redis master with authentication
          # args: ["--slaveof", "redis-master", "6379", "--masterauth", "password"] # Connect to the Redis master with authentication
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
